jekyll/_cci2/server/v4.1/installation/upgrade-server.adoc
---
contentTags:
  platform:
    - Server v4.1
    - Server Admin
noindex: true
component: server-admin-4.1
module: installation
---
= Upgrade server v4.x
:page-layout: classic-docs
:page-description: "This document lists the steps required to upgrade a CircleCI server v4.1 installation."
:icons: font
:experimental:

This page describes the steps needed to upgrade you CircleCI server v4.x installation.

A successful deployment will update the web app. Unless noted in the release notes, updates are rolling updates and there is no downtime.

NOTE: We recommend that you do not skip releases when upgrading.

[#prerequisites]
== Prerequisites

* Ensure you have access to the Kubernetes cluster in which server is installed.
* Ensure you have set up xref:../operator/backup-and-restore#[Backup and Restore].
* Ensure there is a recent backup. For more information, see the xref:../operator/backup-and-restore#creating-backups[Backup and Restore] guide.

[#upgrade-steps]
== Upgrade steps

. Check the link:https://circleci.com/server/changelog/[changelog] and make sure there are no actions you need to take before deploying a new version.

. Optionally, confirm what the update is going to do using link:https://github.com/databus23/helm-diff[Helm Diff]:
+
[source,shell]
helm diff upgrade circleci-server oci://cciserver.azurecr.io/circleci-server -n $namespace --version <version> -f <path-to-values.yaml> --username $USERNAME --password $PASSWORD

. Perform the upgrade:
+
[source,shell]
helm upgrade circleci-server oci://cciserver.azurecr.io/circleci-server -n $namespace --version <version> -f <path-to-values.yaml> --username $USERNAME --password $PASSWORD

. Deploy and run link:https://github.com/circleci/realitycheck[`reality check`] in your test environment to ensure your installation is fully operational.
